# compute-shaders

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  computeShader.glsl  main.cpp  marching.glsl  mold.glsl  physics.glsl  physics_compute.glsl  physics_render.glsl  rays.glsl  screenQuad.fs  shared_shapes.glsl  solver.glsl
kernels/: mold_compute.glsl  mold_render.glsl  physics_compute.glsl  physics_render.glsl  shared_shapes.glsl
